--- a/health_app.kv
+++ b/health_app.kv
@@ -28,6 +28,8 @@
 #:include layout_files/CognitiveDecline.kv
 #:include layout_files/RiskAssesment.kv
 #:include layout_files/About.kv
+#:include layout_files/EducationalResourcesPage.kv
+#:include layout_files/CognitiveRehabPage.kv
 
 WindowManager:
 	id: WindowManager
@@ -46,6 +48,12 @@ WindowManager:
 
 	AboutPage:
 		name:'AboutPage'
+
+	EducationalResourcesPage:
+		name:'EducationalResourcesPage'
+
+	CognitiveRehabPage:
+		name:'CognitiveRehabPage'
 
 	# ------------------------------------- #
 	RiskAssesmentPage:
