--- a/layout_files/Landing.kv
+++ b/layout_files/Landing.kv
@@ -62,13 +62,13 @@
 
 		MyButton:
 			text:'Educational Resources'
-			on_release:	self.on_release()
+			on_release:	self.on_release_custom("EducationalResourcesPage")
 		Widget:
 			size_hint_y:0.05
 
 		MyButton:
 			text: "Cognitive Rehabilitation"
-			on_release:	self.on_release()
+			on_release:	self.on_release_custom("CognitiveRehabPage")
 		Widget:
 			size_hint_y:0.05
 
