cognitivedecline2 is now functional

--- a/health_app.kv
+++ b/health_app.kv
@@ -192,6 +192,10 @@ WindowManager:
 		id:CognitiveDeclinePage
 		name:'CognitiveDeclinePage'
 
+	CognitiveDeclinePage2:
+		id:CognitiveDeclinePage2
+		name:'CognitiveDeclinePage2'
+
 	CognitiveDeclineScorePage:
 		id:CognitiveDeclineScorePage
 		name:'CognitiveDeclineScorePage'
