fixed keyboard auto starting

--- a/layout_files/CognitiveDecline.kv
+++ b/layout_files/CognitiveDecline.kv
@@ -88,7 +88,8 @@
 				name:T1
 				multiline: False
 				on_text_validate: root.validate(self.text, "T1")
-				focus:True
+				focus:False
+				keyboard_mode: 'auto'
 			Widget
 				size_hint_y:0.1
 
@@ -101,6 +102,7 @@
 				name:T2
 				multiline: False
 				on_text_validate: root.validate(self.text, "T2")
+				keyboard_mode: 'auto'
 			Widget
 				size_hint_y:0.1
 
@@ -113,6 +115,7 @@
 				name:T3
 				multiline: False
 				on_text_validate: root.validate(self.text, "T3")
+				keyboard_mode: 'auto'
 			Widget
 				size_hint_y:0.1
 
