--- a/health_app.kv
+++ b/health_app.kv
@@ -9,6 +9,8 @@
 #:set ALT_TXT_COLOR 252/255, 186/255, 3/255, 1
 
 #:set BTN_COLOR 69/255, 90/255, 100/255, 0.9
+#:set BTN_WIDTH 0.7
+#:set BTN_HEIGHT 0.5
 
 #:set FILLER "  "
 
