--- a/layout_files/Alcohol.kv
+++ b/layout_files/Alcohol.kv
@@ -22,13 +22,13 @@
 			padding: dp(0), dp(30)
 			halign:'center'
 
-		Label:
+		WrapLabel:
 			# font_size:'2xw0sp'
 			text: alcohol_landing_subtitle
 			color: TXT_COLOR
 			# text_color:DARK_BLUE
 			theme_text_color:"Hint"
-			halign: 'left'
+			halign: 'center'
 			size_hint_x:0.8
 			color: TXT_COLOR
 			# size_hint_x:0.5
