--- a/layout_files/DietAndFood.kv
+++ b/layout_files/DietAndFood.kv
@@ -38,18 +38,18 @@
 			padding: dp(0), dp(30)
 
 
-		Label:
+		WrapLabel:
 			# font_size:'2xw0sp'
 			text: diet_landing_subtitle
 			# text_color:DARK_BLUE
 			color: TXT_COLOR
 			theme_text_color:"Hint"
-			halign: 'left'
+			halign: 'center'
 			size_hint_x:0.8
 			# size_hint_x:0.5
 			pos_hint:{'center_x':0.5}
 
-		MyButton2:
+		MyButton3:
 			text:"Begin"
 			# font_style:'Button'
 			# # size_hint_x:0.7
