--- a/layout_files/PhysicalActivity.kv
+++ b/layout_files/PhysicalActivity.kv
@@ -13,7 +13,7 @@
             text: physical_landing_blurb
             padding: dp(0), dp(30)
 
-        Label:
+        WrapLabel:
             # font_size:'2xw0sp'
             text: physical_landing_subtitle
             color: TXT_COLOR
@@ -24,7 +24,7 @@
             # size_hint_x:0.5
             pos_hint:{'center_x':0.5}
 
-        MyButton2:
+        MyButton3:
             text:"Begin"
             on_release:root.arrow_right()
 
