--- a/layout_files/TraumaticBrainInjury.kv
+++ b/layout_files/TraumaticBrainInjury.kv
@@ -22,17 +22,17 @@
             padding: dp(0), dp(30)
             halign:'center'
 
-        Label:
+        WrapLabel:
             # font_size:'2xw0sp'
             text: trauma_landing_subtitle
             color: TXT_COLOR
             theme_text_color:"Hint"
-            halign: 'left'
+            halign: 'center'
             size_hint_x:0.8
             # size_hint_x:0.5
             pos_hint:{'center_x':0.5}
 
-        MyButton2:
+        MyButton3:
             text:"Begin"
             # font_style:'Button'
             # size_hint_x:0.7
