--- a/layout_files/templates.kv
+++ b/layout_files/templates.kv
@@ -32,6 +32,16 @@
     halign: 'center'
     markup:True
 
+<MyButton3>:
+    text:""
+    pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+    size_hint:0.8,0.25
+    # size_hint_x:0.8
+    font_style:'Button'
+    background_color: BTN_COLOR
+    halign: 'center'
+    markup:True
+
 
 <RoundedButton>:
     background_color: (0,0,0,0)
