--- a/layout_files/DepressionPage.kv
+++ b/layout_files/DepressionPage.kv
@@ -16,6 +16,9 @@
             text: 'Depression, defined as having little interest in doing things and feeling down/hopeless more often than not in a 2-week period, is linked to increased risk of Alzheimer\'s disease.'
             padding: dp(0), dp(30)
 
+        Widget:
+            size_hint_y:0.2
+
         WrapLabel:
             size_hint_x:0.8
             # font_size:'2xw0sp'
@@ -28,6 +31,9 @@
             # size_hint_x:0.5
             pos_hint:{'center_x':0.5}
             size_hint_y:0.5
+
+        Widget:
+            size_hint_y:0.1
 
         MyButton3:
             text:"Begin"
