--- a/layout_files/DietAndFood.kv
+++ b/layout_files/DietAndFood.kv
@@ -37,6 +37,8 @@
 			text: diet_landing_blurb
 			padding: dp(0), dp(30)
 
+		Widget:
+			size_hint_y:0.2
 
 		WrapLabel:
 			# font_size:'2xw0sp'
@@ -48,6 +50,9 @@
 			size_hint_x:0.8
 			# size_hint_x:0.5
 			pos_hint:{'center_x':0.5}
+
+		Widget:
+			size_hint_y:0.2
 
 		MyButton3:
 			text:"Begin"
