--- a/layout_files/HyperTension.kv
+++ b/layout_files/HyperTension.kv
@@ -7,9 +7,9 @@
         MyActionBar:
             title:hypertension_toolbar_title
 
-        Label:
-            text:''
-            size_hint_y:0.3
+        Widget:
+            size_hint_y:0.1
+
         WrapLabel:
             text: 'High blood pressure, especially in midlife, is associated with at least an 18% increase in the risk for Alzheimer\'s'
             font_size:'14sp'
@@ -17,6 +17,9 @@
             size_hint_x:0.8
             color: TXT_COLOR
             pos_hint:{'center_x':0.5}
+
+        Widget:
+            size_hint_y:0.2
 
         WrapLabel:
             # font_size:'2xw0sp'
@@ -28,6 +31,9 @@
             color: TXT_COLOR
             # size_hint_x:0.5
             pos_hint:{'center_x':0.5}
+
+        Widget:
+            size_hint_y:0.2
 
         MyButton3:
             text:"Begin"
