--- a/layout_files/templates.kv
+++ b/layout_files/templates.kv
@@ -126,6 +126,7 @@
 # =======================================
 
 <NavButtons>:
+    # BoxLayout:
     orientation: 'horizontal'
     size_hint_y:0.3
     Button:
