--- a/layout_files/PhysicalActivity.kv
+++ b/layout_files/PhysicalActivity.kv
@@ -13,16 +13,22 @@
             text: physical_landing_blurb
             padding: dp(0), dp(30)
 
+        Widget:
+            size_hint_y:0.2
+
         WrapLabel:
             # font_size:'2xw0sp'
             text: physical_landing_subtitle
             color: TXT_COLOR
             # text_color:DARK_BLUE
             # theme_text_color:"Hint"
-            halign: 'left'
+            halign: 'center'
             size_hint_x:0.8
             # size_hint_x:0.5
             pos_hint:{'center_x':0.5}
+
+        Widget:
+            size_hint_y:0.2
 
         MyButton3:
             text:"Begin"
