--- a/layout_files/About.kv
+++ b/layout_files/About.kv
@@ -1,7 +1,9 @@
 #:set xx 368
 #:set yy 286
 
-#:set txt_desc "[b]About[/b]\nApproximately 5.2 million Americans have Alzheimer’s disease (AD), which is a neuro degenerative disorder that affects memory and thinking, placing a $1.2 trillion burden on the USA healthcare system.[sup]1[/sup] Recent studies suggest that AD, which has been diagnosed in individuals as early as 30 years of age,[sup]2[/sup] can be prevented by modifying various health behaviors, especially physical activity, early in life.[sup]3[/sup] Individuals who have served in the military may be more likely to develop AD, primarily due to their risk for traumatic brain injury (TBI).[sup]1[/sup] As such, there is a need for the development of AD primary prevention programs aimed specifically at current and former members of the Armed Forces so as to ensure a mentally fit force and a mentally healthy transition out of the force at retirement. Although a recent theory in the field of Alzheimer’s research has been developed in order to address significant gaps in the prevention of AD (i.e., the AD exposome),[sup]4[/sup] programs utilizing it’s tenets have yet to be developed. [b]The significance of the proposed program, especially for the military[/b], is thus: recent research has shown that even individuals with TBI – one of the greatest risk factors for cognitive decline – can decrease their risk of Alzheimer’s disease by modifying lifestyle behaviors, particularly physical activity levels.[sup]5[/sup]\n"
+#:set txt_desc "[b]About[/b]\nApproximately 5.2 million Americans have Alzheimer’s disease (AD), which is a neuro degenerative disorder that affects memory and thinking, placing a $1.2 trillion burden on the USA healthcare system.[sup]1[/sup] Recent studies suggest that AD, which has been diagnosed in individuals as early as 30 years of age,[sup]2[/sup] can be prevented by modifying various health behaviors, especially physical activity, early in life.[sup]3[/sup] Individuals who have served in the military may be more likely to develop AD, primarily due to their risk for traumatic brain injury (TBI).[sup]1[/sup] As such, there is a need for the development of AD primary prevention programs aimed specifically at current and former members of the Armed Forces so as to ensure a mentally fit force and a mentally healthy transition out of the force at retirement. Although a recent theory in the field of Alzheimer’s research has been developed in order to address significant gaps in the prevention of AD (i.e., the AD exposome),[sup]4[/sup] programs utilizing it’s tenets have yet to be developed. [b]The significance of the proposed program, especially for the military[/b], is thus: recent research has shown that even individuals with TBI – one of the greatest risk factors for cognitive decline – can decrease their risk of Alzheimer’s disease by modifying lifestyle behaviors, particularly physical activity levels.[sup]5[/sup]\n\n"
+
+#:set txt_refs2 "[b]References[/b]\n[size=9]1. Sibener L, et al. Alzheimer’s disease prevalence ... veterans. Alzheimers Dement. 2014;10:105-110.\n2. Alzheimer’s Association. 2020 Alzheimer’s disease ... figures. Alzheimers Dement. 2020;16:391-460.\n3. Norton S, et al. Potential for primary prevention ... data. Lancet Neurol. 2014;13:788-794.\n4. Finch CE, Kulminski AM. The AD exposome. Alzheimers Dement. 2019;15(9):1123-1132.\n5. Morris TP, et al. Traumatic brain injury ... initiative. Front Behav Neurosci. 2019;13:135.\n6. Tacchino A, et al. A new app for at-home cognitive ... sclerosis. JMIR Mhealth Uhealth. 2015;3(3):e85[/size]\n."
 <AboutPage>:
 	BoxLayout:
 		orientation: 'vertical'
@@ -32,7 +34,7 @@
 			bar_color: ALT_TXT_COLOR
 
 			WrapLabel:
-				text:txt_desc
+				text:txt_desc+txt_refs2
 				color: TXT_COLOR
 				padding: dp(30), dp(30)
 				markup: True
