updated informational pages

--- a/layout_files/EducationalResourcesPage.kv
+++ b/layout_files/EducationalResourcesPage.kv
@@ -12,9 +12,11 @@
 #:set txt8 "[b]Sex[/b]\nFemales are at greater risk for Alzheimer’s than males, potentially because females live longer on average.[sup]3[/sup] However, cognitive decline can be modified by behavior.\n\n"
 #:set txt9 "[b]Hypertension[/b]\nHigh blood pressure, especially in midlife, is associated with at least an 18% increase in the risk for Alzheimer’s.[sup]4[/sup] The recommendations about diet and exercise in this program may decrease blood pressure,[sup]5[/sup] and thus Alzheimer’s risk.\n\n"
 #:set txt10 "[b]Traumatic Brain Injury[/b]\nResearch shows that even mild TBI can increase one’s risk for the onset of Alzheimer’s.[sup]2[/sup] However, individuals with TBI may be able to improve cognitive function with cognitive rehabilitation therapy (CRT),[sup]3[/sup] in general, and the memory training device called “Operation N-Back,” in particular.[sup]4[/sup]\n\n"
-#:set txt11 "[b]Cognitive Decline[/b]\n“Alzheimer’s disease is a progressive neurologic disease that results in the irreversible loss of neurons, particularly in the ... [memory and reasoning areas of the brain]. The clinical hallmarks are progressive impairment in memory, judgment, decision making, orientation to physical surroundings, and language.” [sup]5[/sup] However, you may be able reduce your risk for Alzheimer’s by modifying some of the behaviors described in this program.\n\n"
 
-#:set txt_refs "[b]References[/b]\n[size=9]1. Thomas RE, et al. Effect of enhanced feedback ... trial. The Lancet. 2006;367(9527):1990-1996.\n\n2. Snowden TM, et al. Does mild ... analysis. J Alzheimers Dis. 2020;78(2):757-775.\n\n3. Cicerone KD, et al. Evidence-based ... through 2008. Arch Phys Med Rehabil. 2011;92(4):519-530.\n\n4. Tacchino A, et al. A new app for ... sclerosis. JMIR Mhealth Uhealth. 2015;3(3):e85.\n\n5. Nussbaum RL, Ellis CE. Alzheimer’s ... disease. NEJM. 2003;348:1356-1364.[/size]"
+# #:set txt11 "[b]Cognitive Decline[/b]\n “Alzheimer’s disease is a progressive neurologic disease that results in the irreversible loss of neurons, particularly in the ... (memory and reasoning areas of the brain). The clinical hallmarks are progressive impairment in memory, judgment, decision making, orientation to physical surroundings, and language.” [sup]5[/sup] However, you may be able reduce your risk for Alzheimer’s by modifying some of the behaviors described in this program.\n\n"
+#:set txt11 "[b]Cognitive Decline[/b]\n “Alzheimer’s disease is a progressive neurologic disease that results in the irreversible loss of neurons, particularly in the  .\n\n"
+
+#:set txt_refs "[b]References[/b]\n[size=14]1. Thomas RE, et al. Effect of enhanced feedback ... trial. The Lancet. 2006;367(9527):1990-1996.\n\n2. Snowden TM, et al. Does mild ... analysis. J Alzheimers Dis. 2020;78(2):757-775.\n\n3. Cicerone KD, et al. Evidence-based ... through 2008. Arch Phys Med Rehabil. 2011;92(4):519-530.\n\n4. Tacchino A, et al. A new app for ... sclerosis. JMIR Mhealth Uhealth. 2015;3(3):e85.\n\n5. Nussbaum RL, Ellis CE. Alzheimer’s ... disease. NEJM. 2003;348:1356-1364.[/size]"
 <EducationalResourcesPage>:
 	BoxLayout:
 		orientation: 'vertical'
@@ -47,7 +49,7 @@
 			bar_color: ALT_TXT_COLOR
 
 			WrapLabel:
-				text:txt1+txt2+txt3+txt4+txt5+txt6+txt7+txt8+txt9+txt10+txt11+txt_refs
+				text:txt1+txt2+txt3+txt4+txt5+txt6+txt7+txt8+txt9+txt10+txt_refs
 				color: TXT_COLOR
 				padding: dp(30), dp(30)
 				markup: True
